# insurance-sell

./: .gitignore  README.md  compose.yaml  model_config.toml  pyproject.toml
changelog.d/: +02051b2e.added.md  +0e9a8f8b.added.md  +1138c0dc.modeling.md  +144626ae.added.md  +199be00a.changed.md  +2dd1b413.added.md  +362a7c2a.changed.md  +3f1d5195.added.md  +40e70768.added.md  +428ac975.changed.md  +4a8fc9f8.added.md  +588fc62b.changed.md  +5bc5173f.modeling.md  +5e1b52bf.added.md  +649df122.added.md  +6d4c0199.changed.md  +6f65cabf.fixed.md  +777f4dcf.added.md  +8882709f.changed.md  +995d624f.added.md  +9b64ae40.added.md  +b480a94d.added.md  +b8a51098.added.md  +e493e57c.added.md  +f3c3f4a2.added.md  +faf5a9d5.added.md  +fbf0a504.changed.md  +fe93b568.changed.md  +ff673563.added.md
docker/mlflow/: Dockerfile
insurance-sell-service/: Dockerfile  pyproject.toml
insurance-sell-service/insurance_sell/: api.py  cli.py  extract.py  schemas.py
insurance-sell-service/insurance_sell/helpers/: settings.py  storage.py
insurance-sell-service/insurance_sell/modeling/: train.py  transformers.py
insurance-sell-service/tests/: test_api.py  test_model_config.toml
insurance-sell-service/tests/helpers/: test_utils.py
insurance-sell-service/tests/modeling/: test_train.py
insurance-sell-ui/: package-lock.json  package.json
insurance-sell-ui/src/lib/components/: Button.svelte  Card.svelte  Footer.svelte  Header.svelte  index.ts
insurance-sell-ui/src/routes/: +page.svelte
insurance-sell-ui/src/routes/dashboard/: +layout.svelte  +page.svelte  +page.ts
insurance_sell/: api.py  cli.py  extract.py  pipeline.py  schemas.py  settings.py  storage.py  utils.py
insurance_sell/helpers/: settings.py  storage.py  utils.py
insurance_sell/modeling/: monitoring.py  train.py
model/: model_2025-02-27 13:12:39.376522.pkl  model_2025-02-27 15:05:48.368982.pkl
tests/: conftest.py  test_api.py  test_extract.py  test_model_config.toml  test_pipeline.py  test_settings.py  test_storage.py  test_utils.py
tests/helpers/: test_settings.py  test_storage.py
tests/modeling/: test_train.py  test_transformers.py
