[project]
name = "insurance-sell"
version = "0.1.0"
description = ""
authors = [
    {name = "RWallan",email = "3am.richardwallan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pandera (>=0.22.1,<0.23.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "cyclopts (>=3.9.0,<4.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "minio (>=7.2.15,<8.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "mlflow (>=2.20.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "boto3 (>=1.37.5,<2.0.0)",
    "prefect (>=3.2.9,<4.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)"
]

[project.scripts]
insurance-sell = "insurance_sell.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
towncrier = "^24.8.0"
httpx = "^0.28.1"
freezegun = "^1.5.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["I", "N", "F", "E", "W", "D", "PL", "PT"]
ignore = ["D100", "D101", "D103", "D104", "D203", "D213", "N806", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
lint = "ruff check .; ruff check . --diff"
format = "ruff check . --fix; ruff format ."
pre_test = "task lint"
test = "pytest -x -vv --cov=insurance_sell"
post_test = "coverage html"
up = "docker compose --env-file .env up -d"
run = "fastapi dev insurance_sell/api.py"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "deu_ruim"
start_string = "<!-- towncrier release notes start -->"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/RWallan/insurance-sell/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/RWallan/insurance-sell/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "modeling"
name = "Modeling"
showcontent = true
