[project]
name = "insurance-sell"
version = "0.1.0"
description = ""
authors = [
    {name = "RWallan",email = "3am.richardwallan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "towncrier (>=24.8.0,<25.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
up = "docker compose --env-file .env up -d"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "deu_ruim"
start_string = "<!-- towncrier release notes start -->"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/RWallan/insurance-sell/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/RWallan/insurance-sell/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "modeling"
name = "Modeling"
showcontent = true
